bindings/c/whiteout_textures.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_Texture whiteout_Texture;
typedef struct whiteout_GifSaveOptions whiteout_GifSaveOptions;
typedef struct whiteout_GifWriter whiteout_GifWriter;
/* ── GifSaveOptions ─────────────────────────────────────────────── */

/* Per-write options for GIF encoding. */
whiteout_GifSaveOptions* whiteout_textures_GifSaveOptions_new(void);
void whiteout_textures_GifSaveOptions_delete(whiteout_GifSaveOptions* self);
/* Delay between frames in centiseconds (1/100 s).  0 = unspecified. */
uint16_t whiteout_textures_GifSaveOptions_get_delayCs(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_delayCs(whiteout_GifSaveOptions* self, uint16_t value);
/* Number of times the animation should loop.  0 = loop forever. */
uint16_t whiteout_textures_GifSaveOptions_get_loopCount(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_loopCount(whiteout_GifSaveOptions* self, uint16_t value);
/* Enable blue-noise ordered dithering when mapping pixels to the palette. */
int32_t whiteout_textures_GifSaveOptions_get_dither(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_dither(whiteout_GifSaveOptions* self, int32_t value);
/* Dither strength in [0, 1].  0 = no visible dithering, 1 = full. */
float whiteout_textures_GifSaveOptions_get_ditherStrength(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_ditherStrength(whiteout_GifSaveOptions* self, float value);
/* Emit a transparent background. Pixels whose source alpha is below 50% become the GIF's transparent palette index; the rest are quantised normally. GIF transparency is 1-bit, so partially-covered (anti- aliased) edge pixels are forced fully opaque or fully transparent. */
int32_t whiteout_textures_GifSaveOptions_get_transparent(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_transparent(whiteout_GifSaveOptions* self, int32_t value);
/* ── GifWriter ─────────────────────────────────────────────── */

/* Encodes a sequence of Texture frames into GIF89a format. */
/*  */
/* Unlike the single-image writers (BMP, TGA, …), this writer accepts a vector of frames.  It does **not** inherit from `textures::Writer`. */
whiteout_GifWriter* whiteout_textures_GifWriter_new(void);
whiteout_GifWriter* whiteout_textures_GifWriter_new_pool(void* pool);
void whiteout_textures_GifWriter_delete(whiteout_GifWriter* self);
/* Write frames to a GIF file on disk using default options. */
void whiteout_textures_GifWriter_write(whiteout_GifWriter* self, const char* filePath, const struct whiteout_Texture* const* frames, size_t frames_size);
/* Write frames to a GIF byte buffer using default options. */
whiteout_Bytes whiteout_textures_GifWriter_write_frames(whiteout_GifWriter* self, const struct whiteout_Texture* const* frames, size_t frames_size);
/* Write frames to a GIF file on disk with explicit options. */
void whiteout_textures_GifWriter_write_filePath_frames_opts(whiteout_GifWriter* self, const char* filePath, const struct whiteout_Texture* const* frames, size_t frames_size, struct whiteout_GifSaveOptions* opts);
/* Write frames to a GIF byte buffer with explicit options. */
whiteout_Bytes whiteout_textures_GifWriter_write_frames_opts(whiteout_GifWriter* self, const struct whiteout_Texture* const* frames, size_t frames_size, struct whiteout_GifSaveOptions* opts);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_GifWriter_hasIssues(const whiteout_GifWriter* self);