bindings/java/src/main/java/whiteout/textures/internal/Native.java


    // -- GifSaveOptions --
    public static final MethodHandle whiteout_textures_GifSaveOptions_new = find(
        "whiteout_textures_GifSaveOptions_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_delete = find(
        "whiteout_textures_GifSaveOptions_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_get_delayCs = find("whiteout_textures_GifSaveOptions_get_delayCs", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_set_delayCs = find("whiteout_textures_GifSaveOptions_set_delayCs", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_textures_GifSaveOptions_get_loopCount = find("whiteout_textures_GifSaveOptions_get_loopCount", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_set_loopCount = find("whiteout_textures_GifSaveOptions_set_loopCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_textures_GifSaveOptions_get_dither = find("whiteout_textures_GifSaveOptions_get_dither", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_set_dither = find("whiteout_textures_GifSaveOptions_set_dither", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_GifSaveOptions_get_ditherStrength = find("whiteout_textures_GifSaveOptions_get_ditherStrength", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_set_ditherStrength = find("whiteout_textures_GifSaveOptions_set_ditherStrength", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_textures_GifSaveOptions_get_transparent = find("whiteout_textures_GifSaveOptions_get_transparent", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifSaveOptions_set_transparent = find("whiteout_textures_GifSaveOptions_set_transparent", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- GifWriter --
    public static final MethodHandle whiteout_textures_GifWriter_new = find(
        "whiteout_textures_GifWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifWriter_new_pool = find(
        "whiteout_textures_GifWriter_new_pool", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifWriter_delete = find(
        "whiteout_textures_GifWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifWriter_write = find(
        "whiteout_textures_GifWriter_write", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_GifWriter_write_frames = find(
        "whiteout_textures_GifWriter_write_frames", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_GifWriter_write_filePath_frames_opts = find(
        "whiteout_textures_GifWriter_write_filePath_frames_opts", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifWriter_write_frames_opts = find(
        "whiteout_textures_GifWriter_write_frames_opts", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_GifWriter_hasIssues = find(
        "whiteout_textures_GifWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

}
